# Skadi-Language

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_PROJECT_OVERVIEW.md  SCADI_IMPLEMENTATION_PLAN.md  SKADI_IMPLEMENTATION_PLAN.md  Scadi_design.txt  example_meteostation.txt  example_tree.scadi  example_tree.skd  mkdocs.yml  requirements-docs.txt
benchmarks/: bench_01_tree.scadi  bench_01_tree.skd  bench_02_read_stats.scadi  bench_02_read_stats.skd  bench_03_find_count.scadi  bench_03_find_count.skd  bench_04_sum_ints.scadi  bench_04_sum_ints.skd  bench_05_push_pop.scadi  bench_05_push_pop.skd  bench_06_struct_account.scadi  bench_06_struct_account.skd  bench_07_struct_list.scadi  bench_07_struct_list.skd  bench_08_path_list_helpers.scadi  bench_09_math_navigation.skd  bench_10_v1_1_toolbox.skd  bench_11_task_channel_pipeline.skd  bench_12_systems_pipeline.skd  bench_13_time_budget.skd
docs/: CLI_USAGE.md  C_RUNTIME_MEMORY_CONTRACT_V1_RU.md  DIAGNOSTICS_STYLE.md  DIAGNOSTIC_CODES_REFERENCE.md  DOCS_INDEX.md  DOCS_POLICY.md  DOCS_SITE_AND_I18N_RU.md  INSTALL_NEW_MACHINE.md  MATH_VECTOR_CORE_BACKLOG_1X_RU.md  ON_ERROR_V1_MATRIX_RU.md  QUICK_START.md  RELEASE_NOTES_V1_RC1_RU.md  RFC_LIST.md  RFC_TEXT.md  (+44 more)
docs-en/: DOCS_SITE_AND_I18N_EN.md  README.md  SHOWCASE_PROGRAMS.md  SKADI_CONCURRENCY_GUIDE_EN.md  SKADI_TIME_DURATION_EN.md
tools/skadi-docs-lexer/: pyproject.toml
tools/skadi-docs-lexer/src/skadi_docs_lexer/: __init__.py  lexer.py
tools/skadi-docs-lexer/src/skadi_docs_lexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+155 files in other folders)
