[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skadi-docs-lexer"
version = "0.1.0"
description = "Pygments lexer for Skadi documentation code blocks"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."pygments.lexers"]
skadi = "skadi_docs_lexer.lexer:SkadiLexer"
